# rust-solo-leveling

./: .gitignore  COURSE_COMPLETION_GUIDE.md  COURSE_STATUS.md  FINAL_COURSE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  MODULE_IMPLEMENTATION_STATUS.md  QUICK_START.md  README.md
module-01-core-rust/: README.md
module-01-core-rust/exercises/ex01-lru-cache/: README.md
module-01-core-rust/exercises/ex01-lru-cache/src/: lib.rs
module-01-core-rust/exercises/ex02-config-cli/: README.md
module-01-core-rust/lectures/: 01-ownership-and-borrowing.md  02-lifetimes.md  03-enums-and-patterns.md  04-error-handling.md  05-traits-and-generics.md  06-collections-iterators.md  07-testing.md
module-01-core-rust/solutions/ex01-lru-cache/: COMMENTARY.md
module-01-core-rust/solutions/ex01-lru-cache/src/: lib.rs
module-01-core-rust/solutions/ex02-config-cli/: COMMENTARY.md  Cargo.toml
module-01-core-rust/solutions/ex02-config-cli/src/: config.rs  error.rs  lib.rs  main.rs  processing.rs
module-02-async-networking/: README.md
module-02-async-networking/exercises/: exercise-01-tcp-chat.md  exercise-02-rest-api.md  exercise-03-websocket-notifications.md
module-02-async-networking/lectures/: 01-async-fundamentals.md  02-tcp-servers.md  03-http-servers.md  04-channels-concurrency.md  05-error-handling-resilience.md
module-02-async-networking/solutions/ex01-tcp-chat/: COMMENTARY.md  Cargo.toml
module-02-async-networking/solutions/ex01-tcp-chat/src/: client.rs  main.rs  message.rs  room.rs  server.rs
module-02-async-networking/solutions/ex02-rest-api/: .env.example  COMMENTARY.md  Cargo.toml  README.md
module-02-async-networking/solutions/ex02-rest-api/migrations/: 001_create_tasks.sql
module-02-async-networking/solutions/ex02-rest-api/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
module-02-async-networking/solutions/ex03-websocket/: COMMENTARY.md  Cargo.toml
module-02-async-networking/solutions/ex03-websocket/src/: main.rs  messages.rs  state.rs  websocket.rs
module-03-kv-store/: README.md
module-03-kv-store/exercises/: exercise-01-bitcask-kv.md
module-03-kv-store/solutions/ex01-bitcask/: COMMENTARY.md  Cargo.toml
module-03-kv-store/solutions/ex01-bitcask/src/: error.rs  lib.rs  log.rs  store.rs
module-04-redis-clone/: README.md
module-04-redis-clone/exercises/: exercise-01-redis-clone.md
module-04-redis-clone/solutions/ex01-redis-clone/: COMMENTARY.md  Cargo.toml
module-04-redis-clone/solutions/ex01-redis-clone/src/: command.rs  db.rs  error.rs  main.rs  resp.rs  server.rs
module-05-message-queue/: README.md
module-05-message-queue/exercises/: exercise-01-message-queue.md
module-05-message-queue/solutions/ex01-message-queue/: COMMENTARY.md  Cargo.toml
module-05-message-queue/solutions/ex01-message-queue/src/: error.rs  log.rs  main.rs  message.rs  queue.rs
module-06-distributed-cache/: README.md
module-06-distributed-cache/solutions/ex01-distributed-cache/: Cargo.toml
module-06-distributed-cache/solutions/ex01-distributed-cache/src/: cache_node.rs  client.rs  error.rs  hash_ring.rs  main.rs
module-07-object-store/: README.md
module-07-object-store/solutions/ex01-object-store/: Cargo.toml
module-07-object-store/solutions/ex01-object-store/src/: error.rs  main.rs  metadata.rs  storage.rs  store.rs
module-08-database/: README.md
module-08-database/solutions/ex01-database/: Cargo.toml
module-08-database/solutions/ex01-database/src/: database.rs  error.rs  main.rs  parser.rs  table.rs  types.rs
module-09-compiler/: README.md
module-09-compiler/solutions/ex01-interpreter/: Cargo.toml
module-09-compiler/solutions/ex01-interpreter/examples/: arrays.monkey  closures.monkey  fibonacci.monkey
module-09-compiler/solutions/ex01-interpreter/src/: ast.rs  builtins.rs  env.rs  error.rs  (+8 more)
module-10-trading-system/: README.md
module-10-trading-system/solutions/ex01-trading-system/: Cargo.toml
module-10-trading-system/solutions/ex01-trading-system/src/: api.rs  engine.rs  error.rs  lib.rs  main.rs  orderbook.rs  types.rs
module-11-python-interop/: README.md
module-11-python-interop/solutions/ex01-pyo3/: Cargo.toml  README.md
module-12-typescript-interop/: README.md
module-12-typescript-interop/solutions/: README.md
module-12-typescript-interop/solutions/ex01-rest-api/: Cargo.toml  README.md
module-12-typescript-interop/solutions/ex02-wasm/: Cargo.toml  README.md
(+7 files in other folders)
