[package]
name = "distributed-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
lru = "0.12"
siphasher = "1.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
